COMP: Superbuild - Add more exception to CTEST_CUSTOM_WARNING_EXCEPTION
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13569 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -82,6 +82,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
 
   # curl suppressions
   "cmcurl.*warning.*conditional expression is constant"
+  "cmcurl.(transfer|ftp|file|cookie).c.*warning C4244.*possible loss of data"
 
   # Suppressing warnings about duplicate libraries in Darwin
   # At some point this may be addressed by CMake feature request: 
