COMP: Superbuild - Add more exception to CTEST_CUSTOM_WARNING_EXCEPTION
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13570 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -42,9 +42,11 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   ${CTEST_CUSTOM_WARNING_EXCEPTION}
   
   # itk suppressions
-  "Utilities.gdcm"
-  "Utilities.vxl"
-  "Insight.Code.Common"
+  "[Uu]tilities.gdcm"
+  "[Uu]tilities.vxl"
+  "[Ii]nsight.[Cc]ode.[Cc]ommon"
+  "[Ii]nsight.[Cc]ode.[Nn]umerics"
+  "[Ii]nsight.[Cc]ode.(IO|io)"
 
   # vtk suppressions
   "vtkfreetype"
