--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -70,6 +70,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   "[Uu]tilities.vxl"
   "[Ii]nsight.[Cc]ode.[Cc]ommon"
   "[Ii]nsight.[Cc]ode.[Nn]umerics"
+  "[Ii]nsight.[Cc]ode.(IO|io)"
 
   # VTK suppressions
   "vtkfreetype"
