COMP: Superbuild - Fix typo error in CTestCustom.cmake.in
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13574 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -102,7 +102,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
 
   # curl suppressions
   "cmcurl.*warning.*conditional expression is constant"
-  "cmcurl."warning.*conversion from.*possible loss of data"
+  "cmcurl.*warning.*conversion from.*possible loss of data"
   "cmcurl.(transfer|ftp|file|cookie).c.*warning C4244.*"
   
   # Visual studio spurious warnings...
