--- a/SuperBuild/tcl_configure_step.cmake.in
+++ b/SuperBuild/tcl_configure_step.cmake.in
@@ -1,5 +1,15 @@
 
+set(configure_cflags)
+#
+# To fix compilation problem: relocation R_X86_64_32 against `a local symbol' can not be
+# used when making a shared object; recompile with -fPIC
+# See http://www.cmake.org/pipermail/cmake/2007-May/014350.html
+#
+if( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
+  set(configure_cflags "-fPIC")
+endif()
+
 execute_process(
-  COMMAND sh configure --prefix=@tcl_build@
+  COMMAND sh configure --prefix=@tcl_build@ --with-cflags=${configure_cflags}
   WORKING_DIRECTORY @tcl_base@/tcl/unix
 )
