--- a/SuperBuild/tk_configure_step.cmake.in
+++ b/SuperBuild/tk_configure_step.cmake.in
@@ -1,4 +1,13 @@
 
+set(configure_cflags)
+#
+# To fix compilation problem: relocation R_X86_64_32 against `a local symbol' can not be
+# used when making a shared object; recompile with -fPIC
+# See http://www.cmake.org/pipermail/cmake/2007-May/014350.html
+#
+if( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
+  set(configure_cflags "-fPIC")
+endif()
 
 # it seems that you need to run configure in the unix directory
 # and not from the parent directory relatively i.e. sh /unix/configure
@@ -7,16 +16,16 @@
 if(APPLE)
 
   execute_process(
-    COMMAND sh configure --with-tcl=@tcl_build@/lib --prefix=@tcl_build@ --disable-corefoundation --x-libraries=/usr/X11R6/lib --x-includes=/usr/X11R6/include --with-x
+    COMMAND sh configure --with-tcl=@tcl_build@/lib --prefix=@tcl_build@ --disable-corefoundation --x-libraries=/usr/X11R6/lib --x-includes=/usr/X11R6/include --with-x --with-cflags=${configure_cflags}
     WORKING_DIRECTORY @tcl_base@/tk/unix
   )
 
-else(APPLE)
+else()
 
   execute_process(
-    COMMAND sh configure --with-tcl=@tcl_build@/lib --prefix=@tcl_build@ 
+    COMMAND sh configure --with-tcl=@tcl_build@/lib --prefix=@tcl_build@  --with-cflags=${configure_cflags}
     WORKING_DIRECTORY @tcl_base@/tk/unix
   )
 
-endif(APPLE)
+endif()
 
