COMP: Superbuild - Added ctest warning exception specific to vtkCarbonRenderWindow
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13587 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -102,6 +102,8 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   "VTK.*Filtering.*cxx"
   "VTK.*IO.*cxx"
   "VTK.*Infovis.*cxx"
+  # exception specific to Mac/Carbon
+  "VTK.Rendering.vtkCarbonRenderWindow.*warning.*(NewRgn|DiffRgn|EqualRgn|DisposeRgn).*is deprecated"
   
   # Libs/OpenIGTLink
   "(OpenIGTLink|openigtlink).[Ss]ource.igtl"
