--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -60,6 +60,9 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   "VTK.*Filtering.*cxx"
   "VTK.*IO.*cxx"
   "VTK.*Infovis.*cxx"
+  # exception specific to Mac/Carbon
+  "VTK.Rendering.vtkCarbonRenderWindow.*warning.*(NewRgn|DiffRgn|EqualRgn|DisposeRgn).*is deprecated"
+
 
   # qt suppressions from vtk...
   # Some VTK dashboards include building bits of Qt which produce lots of
