COMP: Superbuild - Added itk "Utilities.itktiff" exception and also fix a typo error
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13588 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -44,6 +44,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   # itk suppressions
   "[Uu]tilities.gdcm"
   "[Uu]tilities.vxl"
+  "[Uu]tilities.itktiff"
   "[Ii]nsight.[Cc]ode.[Cc]ommon"
   "[Ii]nsight.[Cc]ode.[Nn]umerics"
   "[Ii]nsight.[Cc]ode.(IO|io)"
