--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -38,6 +38,24 @@ ENDFOREACH()
 
 
 #-----------------------------------------------------------------------------
+# Platform check
+#-----------------------------------------------------------------------------
+
+set(PLATFORM_CHECK true)
+
+if(PLATFORM_CHECK)
+  # See CMake/Modules/Platform/Darwin.cmake)
+  #   6.x == Mac OSX 10.2 (Jaguar)
+  #   7.x == Mac OSX 10.3 (Panther)
+  #   8.x == Mac OSX 10.4 (Tiger)
+  #   9.x == Mac OSX 10.5 (Leopard)
+  #  10.x == Mac OSX 10.6 (Snow Leopard)
+  if (DARWIN_MAJOR_VERSION LESS "8")
+    message(FATAL_ERROR "Only Mac OSX >= 10.4 are supported !")
+  endif()
+endif()
+
+#-----------------------------------------------------------------------------
 # Update CMake module path
 #------------------------------------------------------------------------------
 
