--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -21,6 +21,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   
   # Numpy warnings
   "_configtest.*warning"
+  "NUMPY._configtest.*undefined reference"
   # C4244: 'conversion' conversion from 'type1' to 'type2', possible loss of data
   # C4028: formal parameter 'number' different from declaration
   # C4996: 'function': was declared deprecated
