COMP: Superbuild - Add ctest warning exception specific to Mac / VTK / X11
----
/usr/X11R6/include/GL/gl.h:1402:1: warning: "GL_GLEXT_LEGACY" redefined
In file included from /.../bin/VTK-build/Rendering/vtkgl.h:22,
                 from /.../bin/VTK/Rendering/vtkColorMaterialHelper.cxx:22:

/.../bin/VTK/Rendering/vtkOpenGL.h:21:1: warning: this is the location of the previous definition
----

See http://www.cdash.org/CDash/viewBuildError.php?type=1&buildid=624885

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13602 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -105,6 +105,9 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   "VTK.*Infovis.*cxx"
   # exception specific to Mac/Carbon
   "VTK.Rendering.vtkCarbonRenderWindow.*warning.*(NewRgn|DiffRgn|EqualRgn|DisposeRgn).*is deprecated"
+  # exception specific to Mac/X11
+  "VTK.Rendering.vtkOpenGL.*warning: this is the location of the previous definition"
+
   
   # Libs/OpenIGTLink
   "(OpenIGTLink|openigtlink).[Ss]ource.igtl"
