COMP: Superbuild - Added ctest warning exception for python / Mac
---
/usr/bin/ranlib: file: libpython2.6.a(pymath.o) has no symbols
---

See http://www.cdash.org/CDash/viewBuildError.php?type=1&buildid=624885

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13603 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -67,6 +67,8 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   "Modules.zlib.gzio"
   "Modules._ctypes.libffi_msvc.ffi.*warning C4018"
   "Modules._multiprocessing.multiprocessing.*warning C4101"
+  # Mac
+  "/usr/bin/ranlib: file: libpython2.6.a(pymath.o) has no symbols"
   
   # Make
   "warning: jobserver unavailable"
