COMP: Superbuild - option Slicer3_USE_QT is now passed to inner project Slicer3
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13615 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -465,6 +465,7 @@ ExternalProject_Add(${proj}
     -DSLICERLIBCURL_DIR:PATH=${CMAKE_BINARY_DIR}/cmcurl-build
     # Python
     -DSlicer3_USE_PYTHON:BOOL=${Slicer3_USE_PYTHON}
+    -DSlicer3_USE_PYTHONQT:BOOL=${Slicer3_USE_PYTHONQT}
     -DSlicer3_USE_SYSTEM_PYTHON:BOOL=OFF
     -DSlicer3_USE_NUMPY:BOOL=${Slicer3_BUILD_NUMPY}
     -DPYTHON_EXECUTABLE:FILEPATH=${slicer_PYTHON_EXECUTABLE}
