ENH: SlicerQt: remove the Volumes and Measurements modules from the Slicer build with Qt.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13643 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/CMakeLists.txt
+++ b/QTModules/CMakeLists.txt
@@ -18,8 +18,8 @@ INCLUDE(${Slicer3_CMAKE_DIR}/Slicer3QTModuleMacros.cmake)
 
 SET(qtmodules
   SlicerWelcome
-  Volumes
-  Measurements
+  #Volumes
+  #Measurements
   TractographyFiducialSeeding
   )
 
