COMP: Superbuild - Added ctest custom warning for CTK/log4qt on Mac
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13674 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -126,6 +126,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   
   # CTK - log4qt
   "logobjectptr.obj : warning LNK4221: no public symbols found; archive member will be inaccessible"
+  "/usr/bin/ranlib: .*liblog4qt.a(log4qt.cpp.o) has no symbols"
 
   # KWWidgets
   "(KWW|kww)idgets.[Uu]tilities.tkdnd"
