COMP: Superbuild - Added blt incrTcl and iwidgets as dependency of Slicer target
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13679 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -341,6 +341,9 @@ set(OpenIGTLink_DEPENDENCIES)
 set(teem_DEPENDENCIES vtk)
 set(cmcurl_DEPENDENCIES)
 set(slicer_DEPENDENCIES vtk Insight BatchMake OpenIGTLink teem cmcurl)
+if(Slicer3_USE_KWWIDGETS)
+  list(APPEND slicer_DEPENDENCIES blt incrTcl iwidgets)
+endif()
 
 #------------------------------------------------------------------------------
 # Conditionnaly include ExternalProject Target
