ENH: BrainlabModule will be in the nightly build from now on.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13688 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -92,6 +92,7 @@ if(Slicer3_USE_OPENIGTLINK)
     OpenIGTLinkIF
     NeuroNav
     ProstateNav
+    BrainlabModule
     # IGTNavigation
     # OpenCV
     )
